--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ output:
     keep_md: true
 ---
 
-This Jeremy Sellars' course project described here: https://class.coursera.org/getdata-030
+This is Jeremy Sellars' course project (described here: https://class.coursera.org/getdata-030).
 
 Creates a tidy dataset from data from "Human Activity Recognition Using Smartphones"
 with mean sensor values per participant subject in each of 6 activities.
